# systemless-debloat-config-manager_rs

./: .dockerignore  .editorconfig  .eslintrc.yml  .gitignore  .pre-commit-config.yaml  .prettierrc.yaml  Cargo.toml  Dockerfile  LICENSE  Makefile.toml  README.md  package-lock.json  package.json  postcss.config.js  posthtml.config.js  webpack.common.js  webpack.config.js  webpack.dev.js  webpack.prod.js
.github/workflows/: dockerimage.yml
docs/: SystemlessDebloaterList.sh
src/: lib.rs  parser.rs  utils.rs
tests/: web.rs
www/: .eslintrc.json  .eslintrc.yml  .stylelintrc.json  browserconfig.xml  index.html  index.js  manifest.json  package-lock.json  package.json  postcss.config.js  style.css  style.scss  tailwind.config.js  webpack.common.js  webpack.dev.js  webpack.prod.js
www/.bin/: create-wasm-app.js
www/assets/: about.txt  manifest.json
